:wrench: MIT license text is automatically added to the code

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,6 +13,8 @@ set(CXX_EXTENSIONS OFF)
 
 set(TARGET_NAME "string_builder")
 
+file(READ "${CMAKE_SOURCE_DIR}/LICENSE.md" LICENSE)
+configure_file("${CMAKE_SOURCE_DIR}/src/${TARGET_NAME}.hpp" "${CMAKE_BINARY_DIR}/${TARGET_NAME}.hpp")
 add_library(${TARGET_NAME} INTERFACE)
 
 #--------------------
@@ -23,7 +25,6 @@ if(DOXYGEN_FOUND)
     set(DOXYGEN_FULL_PATH_NAMES "YES")
     set(DOXYGEN_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/doc")
     set(DOXYGEN_STRIP_FROM_PATH "${CMAKE_BINARY_DIR}")
-    configure_file("${CMAKE_SOURCE_DIR}/src/${TARGET_NAME}.hpp" "${CMAKE_BINARY_DIR}/${TARGET_NAME}.hpp")
     doxygen_add_docs(doc "${CMAKE_BINARY_DIR}/${TARGET_NAME}.hpp")
     # Custom script to wipe the content of the doc folder (see cmake/wipe_doc.cmake for more details)
     add_custom_target(wipe_docs COMMAND ${CMAKE_COMMAND} -P "${CMAKE_SOURCE_DIR}/cmake/wipe_doc.cmake")
