--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,9 +8,13 @@ cmake_minimum_required(VERSION 3.9)
 
 project("bosswestfalen::string_builder" VERSION 0.1.0 LANGUAGES CXX)
 
+
 set(CXX_STANDARD 17)
 set(CXX_STANDARD_REQUIRED ON)
 set(CXX_EXTENSIONS OFF)
+
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Werror -Wextra -pedantic")
+
 
 set(TARGET_NAME "string_builder")
 set(SOURCE_FILE_NAME "${TARGET_NAME}.hpp")
